syntax = "proto3";

package p2p;

option java_package = "com.ht.p2p.proto";
option java_multiple_files = true;

enum MessageType {
  MSG_UNSPECIFIED = 0;

  HELLO_REQ = 1;
  HELLO_RES = 2;

  PING_REQ  = 3;
  PING_RES  = 4;

  ERROR_RES = 5;
}

message PingReq {
  string message = 1;
}

message PingRes {
  bool ok = 1;
  string message = 2;
}

message HelloReq {
  bytes node_id = 1;
  uint32 listen_port = 2;
  string version = 3;
}

message HelloRes {
  bool ok = 1;
  bytes node_id = 2;
  string version = 3;
}

message ErrorRes {
  string code = 1;     // e.g. "NO_ROUTE", "BAD_REQUEST"
  string message = 2;  // human readable
}

message Envelope {
  // Core routing/debug fields
  MessageType type = 1;        // NEW: explicit type
  bytes sender_id = 2;
  string request_id = 3;
  int64 timestamp_ms = 4;

  oneof payload {
    PingReq  ping_req  = 10;
    PingRes  ping_res  = 11;
    HelloReq hello_req = 12;
    HelloRes hello_res = 13;
    ErrorRes error_res = 14;   // NEW
  }
}
